# parking-meter

./: .env.local  .gitignore  .prettierrc  Cool_project.ipynb  LICENSE  Parking_Meter.ipynb  Parking_meter.ipynb  README.md  everything.json  package-lock.json  package.json  pyproject.toml  requirements.txt  test.py
csrnet-cars/: augmentation.py  car_dataset.py  dataset.py  download.py  generate_data.py  generate_dataset.py  model.py
csrnet-cars/generation/: augmentation.py  car_dataset.py  clean.py  generate_dataset.py  generate_h5.py  generate_initial_heatmaps.py
csrnet-cars/train/: car_dataset.py  train.py
csrnet-paper/CSRNet-pytorch/: CSRNet.ipynb  image.py  model.py  train.py
csrnet/CSRNet-pytorch/: dataset.py  image.py  make_dataset.py  model.py  test.py  train.py  utils.py
data/: dimensions.txt  output.csv
data/parking_lots/: via_project_24Jun2025_22h44m.json
data_fetcher/: car.py  extract_cars.py  scrape_dimensions.py  windshield.py
data_fetcher/dimensions/: data_analysis.ipynb  generate_dimensions.py  random_noise.py  save_csv.py  scrape.py
data_generation/data/: cars.json  index.html
data_generation/data_collection/dimensions/: save_csv.py
data_generation/generation/: car.py  random_noise.py
data_generation/generation/cars/: car.py  car_factory.py  generate_dimensions.py
data_generation/writer/: jsconfig.json  sketch.js
generator/: index.html  sketch.js
inference/notebooks/: data_analysis.ipynb  dataset_dist.ipynb  parking_lot_visualizer.ipynb
random_files/: count.py  main.py
simplecnn/: main.py
